# SceneRecognitionCNN

./: .gitignore  README.md  create_small_dataset.py  infer.py  infer_unified.py  pyproject.toml  split_cub_dataset.py  train.py  trainDDP.py  trainer.py
configs/: train_dinov3_params.yaml  train_fastvit_params.yaml  train_params.yaml  train_resnet18_params.yaml  train_swin_params.yaml
docs/: Datasets.md  IO_places56.txt  categories_places365.txt  categories_places56.txt  prompt.md  workLine.md
export/: export_onnx.py  infer_onnx.py
models/: __init__.py  dinov3_linear.py  fastvit_linear.py  resnet_linear.py  swin_linear.py
models/swin_transformer/: __init__.py  build.py  swin_transformer.py  swin_transformer_moe.py  utils.py
utils/: data_loader_cache.py  losses.py  metrics.py  model_statistics.py  train.py
